--- a/style.css
+++ b/style.css
@@ -50,3 +50,108 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.social-links > a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.social-links > a:hover {
+    color: #f0f0f0;
+    text-decoration: underline;
+    font-size: larger;
+}
+
+footer > p {
+    margin: 0;
+    color: aliceblue;
+    font-weight: bold;
+}
+
+/* project list */
+.project-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    padding: 20px;
+}
+
+.project-card {
+    background-color: #e6e5e5;
+    border-radius: 8px;
+    border: #474646 solid 5px;
+    padding: 15px;
+    width: 240px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+}
+
+.project-card:hover {
+    transform: translateY(-15px);
+}
+
+.project-card h3 {
+    margin-top: 0px;
+    color: #000000;
+    font-size: 18px;
+}
+
+.project-card p {
+    color: #000000;
+    font-size: 20px;
+}
+
+.project-card a {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 9px 15px;
+    color: #fff5f5;
+    background-color: #000000;
+    border-radius: 15px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.project-card a:hover {
+    background-color: #5da186;
+    transform: scale(1.05);
+}
+
+.navbar {
+
+    display: flex;
+    position: sticky;
+    z-index: 1000;
+    justify-content: center;
+    top: 0;
+    background-color: #474646;
+    padding: 10px 0;
+
+}
+
+.navbar > li> a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 30px;
+    
+    font-weight: bold;
+    background-color: #000000;
+    border-radius: 18px;
+    transition: background-color 0.3s, ease;
+
+}
+
+.navbar > li> a:hover {
+    background-color: #5da186;
+    transform: scale(1.05);
+}
